modified login to accept email as well
