# docs/swagger.json
@@ -10,6 +10,20 @@
       "url": "/api/v1"
     }
   ],
+  "tags": [
+    {
+      "name": "Guest Key Controller",
+      "description": "Endpoints for Guest Key Controller"
+    },
+    {
+      "name": "Health Controller",
+      "description": "Endpoints for Health Controller"
+    },
+    {
+      "name": "User Controller",
+      "description": "Endpoints for User Controller"
+    }
+  ],
   "components": {
     "securitySchemes": {
       "BearerAuth": {
@@ -133,12 +147,12 @@
     }
   },
   "paths": {
-    "/api/v1/health": {
+    "/health": {
       "get": {
         "tags": [
-          "api"
+          "Health Controller"
         ],
-        "summary": "GET /api/v1/health",
+        "summary": "GET /health",
         "security": [
           {
             "BearerAuth": []
@@ -162,7 +176,7 @@
     "/register": {
       "post": {
         "tags": [
-          "register"
+          "User Controller"
         ],
         "summary": "POST /register",
         "security": [
@@ -177,20 +191,22 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "username": {
-                    "type": "string"
-                  },
-                  "email": {
-                    "type": "string"
-                  },
-                  "password": {
-                    "type": "string"
-                  },
-                  "role": {
-                    "type": "string"
-                  },
                   "reqData": {
-                    "type": "string"
+                    "type": "object",
+                    "properties": {
+                      "username": {
+                        "type": "string"
+                      },
+                      "email": {
+                        "type": "string"
+                      },
+                      "password": {
+                        "type": "string"
+                      },
+                      "role": {
+                        "type": "string"
+                      }
+                    }
                   }
                 }
               },
@@ -199,8 +215,7 @@
                   "username": "string_username",
                   "email": "user@example.com",
                   "password": "string_password",
-                  "role": "string_role",
-                  "reqData": "2025-12-09T19:15:30.869Z"
+                  "role": "string_role"
                 }
               }
             }
@@ -239,7 +254,7 @@
     "/login": {
       "post": {
         "tags": [
-          "login"
+          "User Controller"
         ],
         "summary": "POST /login",
         "security": [
@@ -254,22 +269,27 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "username": {
-                    "type": "string"
-                  },
-                  "password": {
-                    "type": "string"
-                  },
                   "reqData": {
-                    "type": "string"
+                    "type": "object",
+                    "properties": {
+                      "username": {
+                        "type": "string"
+                      },
+                      "email": {
+                        "type": "string"
+                      },
+                      "password": {
+                        "type": "string"
+                      }
+                    }
                   }
                 }
               },
               "example": {
                 "reqData": {
                   "username": "string_username",
-                  "password": "string_password",
-                  "reqData": "2025-12-09T19:15:30.871Z"
+                  "email": "user@example.com",
+                  "password": "string_password"
                 }
               }
             }
@@ -286,6 +306,9 @@
                     "username": {
                       "type": "string"
                     },
+                    "email": {
+                      "type": "string"
+                    },
                     "role": {
                       "type": "string"
                     }
@@ -293,6 +316,7 @@
                 },
                 "example": {
                   "username": "string_username",
+                  "email": "user@example.com",
                   "role": "string_role"
                 }
               }
@@ -304,7 +328,7 @@
     "/refresh": {
       "post": {
         "tags": [
-          "refresh"
+          "User Controller"
         ],
         "summary": "POST /refresh",
         "security": [
@@ -330,7 +354,7 @@
     "/logout": {
       "post": {
         "tags": [
-          "logout"
+          "User Controller"
         ],
         "summary": "POST /logout",
         "security": [
@@ -363,7 +387,7 @@
     "/forgot-password": {
       "post": {
         "tags": [
-          "forgot-password"
+          "User Controller"
         ],
         "summary": "POST /forgot-password",
         "security": [
@@ -378,18 +402,19 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "email": {
-                    "type": "string"
-                  },
                   "reqData": {
-                    "type": "string"
+                    "type": "object",
+                    "properties": {
+                      "email": {
+                        "type": "string"
+                      }
+                    }
                   }
                 }
               },
               "example": {
                 "reqData": {
-                  "email": "user@example.com",
-                  "reqData": "2025-12-09T19:15:30.871Z"
+                  "email": "user@example.com"
                 }
               }
             }
@@ -420,7 +445,7 @@
     "/reset-password/:token": {
       "post": {
         "tags": [
-          "reset-password"
+          "User Controller"
         ],
         "summary": "POST /reset-password/:token",
         "security": [
@@ -435,18 +460,19 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "newPassword": {
-                    "type": "string"
-                  },
                   "reqData": {
-                    "type": "string"
+                    "type": "object",
+                    "properties": {
+                      "newPassword": {
+                        "type": "string"
+                      }
+                    }
                   }
                 }
               },
               "example": {
                 "reqData": {
-                  "newPassword": "string_newPassword",
-                  "reqData": "2025-12-09T19:15:30.871Z"
+                  "newPassword": "string_newPassword"
                 }
               }
             }
@@ -477,7 +503,7 @@
     "/check-email": {
       "post": {
         "tags": [
-          "check-email"
+          "User Controller"
         ],
         "summary": "POST /check-email",
         "security": [
@@ -492,18 +518,19 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "email": {
-                    "type": "string"
-                  },
                   "reqData": {
-                    "type": "string"
+                    "type": "object",
+                    "properties": {
+                      "email": {
+                        "type": "string"
+                      }
+                    }
                   }
                 }
               },
               "example": {
                 "reqData": {
-                  "email": "user@example.com",
-                  "reqData": "2025-12-09T19:15:30.871Z"
+                  "email": "user@example.com"
                 }
               }
             }
@@ -534,7 +561,7 @@
     "/generate-guest-key": {
       "post": {
         "tags": [
-          "generate-guest-key"
+          "Guest Key Controller"
         ],
         "summary": "POST /generate-guest-key",
         "security": [
@@ -549,18 +576,19 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "department": {
-                    "type": "string"
-                  },
                   "reqData": {
-                    "type": "string"
+                    "type": "object",
+                    "properties": {
+                      "department": {
+                        "type": "string"
+                      }
+                    }
                   }
                 }
               },
               "example": {
                 "reqData": {
-                  "department": "string_department",
-                  "reqData": "2025-12-09T19:15:30.871Z"
+                  "department": "string_department"
                 }
               }
             }
@@ -602,8 +630,8 @@
                   "id": 1,
                   "name": "string_name",
                   "guestKeyId": 1,
-                  "status": "2025-12-09T19:15:30.871Z",
-                  "createdOnUTC": "2025-12-09T19:15:30.871Z",
+                  "status": "string_status",
+                  "createdOnUTC": "string_createdOnUTC",
                   "lastModifiedOnUTC": "string_lastModifiedOnUTC"
                 }
               }
@@ -615,7 +643,7 @@
     "/guest-login": {
       "post": {
         "tags": [
-          "guest-login"
+          "Guest Key Controller"
         ],
         "summary": "POST /guest-login",
         "security": [
@@ -630,17 +658,19 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "guestKey": {
-                    "type": "string"
-                  },
-                  "guestName": {
-                    "type": "string"
-                  },
-                  "role": {
-                    "type": "string"
-                  },
                   "reqData": {
-                    "type": "string"
+                    "type": "object",
+                    "properties": {
+                      "guestKey": {
+                        "type": "string"
+                      },
+                      "guestName": {
+                        "type": "string"
+                      },
+                      "role": {
+                        "type": "string"
+                      }
+                    }
                   }
                 }
               },
@@ -648,8 +678,7 @@
                 "reqData": {
                   "guestKey": "string_guestKey",
                   "guestName": "string_guestName",
-                  "role": "string_role",
-                  "reqData": "2025-12-09T19:15:30.872Z"
+                  "role": "string_role"
                 }
               }
             }
@@ -688,7 +717,7 @@
     "/guestkey/status": {
       "post": {
         "tags": [
-          "guestkey"
+          "Guest Key Controller"
         ],
         "summary": "POST /guestkey/status",
         "security": [
@@ -703,22 +732,23 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "guestId": {
-                    "type": "string"
-                  },
-                  "status": {
-                    "type": "string"
-                  },
                   "reqData": {
-                    "type": "string"
+                    "type": "object",
+                    "properties": {
+                      "guestId": {
+                        "type": "string"
+                      },
+                      "status": {
+                        "type": "string"
+                      }
+                    }
                   }
                 }
               },
               "example": {
                 "reqData": {
                   "guestId": 1,
-                  "status": "2025-12-09T19:15:30.872Z",
-                  "reqData": "2025-12-09T19:15:30.872Z"
+                  "status": "string_status"
                 }
               }
             }
